dashboard instead of just the one user's dashboard.

* Fixed bug 1935727 InvalidCastException drawing line chart, if the
x values were strings instead of integers.

* Fixed bug where edit_bug.aspx crashed if it was trying to display a
bug with its project value set to a non-existent project. That can 
happened if the bug is posted via the screen capture utility.

* No longer displaying "diff" link on subversion revisions where the
Subversion action was an add.  Clicking on diff was causing an error
to display because there is no previous version to diff with.

Enhancements:

* Added status column to relationships.aspx

* Popups that display when you hover over items in the bug list now
show all comments, not just the first.  Also, popups show after
hovering 250 milliseconds, instead of after 400 milliseconds.

* Custom date fields - you can search them using a date range.

-----------------------------------------------------------------------
Version 2.8.4  4/8/2008
-----------------------------------------------------------------------

To migrate to this release from 2.8.3, run this SQL:

update custom_col_metadata set 
ccm_dropdown_type = '' where ccm_dropdown_type = 'not a dropdown'

* Fixed bug introduced in version 2.8.3.  If you used version 2.8.3 to
add a custom field that was not a dropdown, you need this fix.

Also fixed:

* Non-dropdown custom columns whose size was big enough to be displayed
as textareas were wrongly being displayed as textareas.

* Screen label for change_password.aspx was wrong.  Should read "New
Password", not "Email".

* If you have two browswer windows open, clicking on flags could
trigger flags.aspx to report a duplicate insert error.   The error is
harmless, but annoying, so now suppressing it.

-----------------------------------------------------------------------
Version 2.8.3  4/5/2008
-----------------------------------------------------------------------

Small bug fixes:
