@@ -15,7 +15,7 @@ Distributed under the terms of the GNU General Public License
 
 <p>
 
-Version 2.8.5 April 20, 2008
+Version 2.8.5 May 10, 2008
 
 
 <p>
@@ -103,6 +103,7 @@ Distributed under the terms of the <a target=_blank href="COPYING">GNU General P
 <li>Mike Elmalem at <a href="http://efactory.ca">eFactory</a>
 <li>Peter Heath
 <li>Petr Kalup at <a href="http://www.cgcc.cz">CGC Consulting</a>
+<li>Samuel Morree at <a href="http://trandsoft.com/">Trandsoft Research</a>
 <li>romwil
 
 
